--- a/LWCPersonalDev/force-app/main/default/classes/BoatDataService.cls
+++ b/LWCPersonalDev/force-app/main/default/classes/BoatDataService.cls
@@ -130,7 +130,10 @@ public with sharing class BoatDataService
         return JSON.serialize(Database.query(query));
     }
 
-    public static String updateBoatList(Object data){
+    // Method to update boat records, Aura enabled to be called by LWC
+    @AuraEnabled
+    public static String updateBoatList(Object data)
+    {
         List<Boat__c> boatsForUpdate = (List<Boat__c>) JSON.deserialize(
             JSON.serialize(data),
             List<Boat__c>.class
